# python-extended-enum

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  publish.yml
extended_enum/: __init__.py  tools.py
scripts/: run_wemake-python-styleguide.sh
tests/: test_comparison.py  test_duplicates.py  test_methods.py  test_serialization.py
tests/tools/: test_formatting.py
