[tool.poetry]
name = "extended-enum"
version = "0.1.0"
description = "Extends the capabilities of the standard Enum."
authors = ["Ilichev Andrey <ilichev.andrey.y@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ilichev-andrey/extended-enum"
repository = "https://github.com/ilichev-andrey/extended-enum"
documentation = "https://github.com/ilichev-andrey/extended-enum"
keywords = ["enum", "extended", "extended-enum"]
packages = [
    { include = "extended_enum" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-class-attributes-order = "^0.1.3"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
orjson = "^3.9.10"

[tool.poetry.group.distributing]
optional = true

[tool.poetry.group.distributing.dependencies]
twine = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/config.html
skip_empty = true
skip_covered = true

[tool.coverage.run]
branch = true
relative_files = true
omit = []

[tool.coverage.paths]
source = [
    "extended_enum",
]