[tool.poetry]
name = "extended-enum"
version = "1.0.2"
description = "Extends the capabilities of the standard Enum."
authors = ["Ilichev Andrey <ilichev.andrey.y@gmail.com>"]
homepage = "https://github.com/ilichev-andrey/python-extended-enum"
license = "Apache-2.0"
readme = "README.md"
keywords = ["enum", "extended", "extended-enum"]
packages = [
    { include = "extended_enum" }
]
include = ["LICENSE", "README.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.urls]
"Repository" = "https://github.com/ilichev-andrey/python-extended-enum"
"Documentation" = "https://github.com/ilichev-andrey/python-extended-enum"
"Tracker" = "https://github.com/ilichev-andrey/python-extended-enum/issues"

[tool.poetry.dependencies]
python = ">=3.8.1, <3.11"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-class-attributes-order = "^0.1.3"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"
flake8-pyproject = "^1.2.3"
flake8-import-order = "^0.18.2"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
orjson = "^3.9.10"

[tool.poetry.group.distributing]
optional = true

[tool.poetry.group.distributing.dependencies]
twine = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
show_source = true
statistics = false
doctests = true
max-line-length = 120
accept_encodings = "utf-8"
ignore = [
    # flake8-isort:
    "I",
    # flake8-rst-docstrings:
    "RST",
    # flake8-docstrings:
    "D104",
    # wemake-python-styleguide:
    "WPS110", "WPS214", "WPS237", "WPS305", "WPS306", "WPS412"
]

# Excluding some files and directories:
exclude = ["__pycache__"]

# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = "long"
docstring_style = "google"

# Plugin: flake8-import-order
import-order-style = "pep8"
application-import-names = ["extended_enum"]

# Plugin: flake8-class-attributes-order
class_attributes_order = [
    "field",
    "meta_class",
    "nested_class",
    "magic_method",
    "property_method",
    "static_method",
    "class_method",
    "method",
    "private_static_method",
    "private_class_method",
    "private_method",
]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/config.html
skip_empty = true
skip_covered = true

[tool.coverage.run]
branch = true
relative_files = true
omit = []

[tool.coverage.paths]
source = [
    "extended_enum",
]